[package]
name = "kvs-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.2"
rand = "0.8.5"
rkyv = { version = "0.7.39", features = ["validation", "arrayvec"], git = "https://github.com/geobeau/rkyv"}

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "btree"
harness = false
opt-level = 2
